[gd_scene load_steps=2 format=3 uid="uid://xykkhiq17c11"]

[ext_resource type="Script" path="res://app/scenes/key_set.gd" id="1_a7i8r"]

[node name="key_set" type="VBoxContainer"]
script = ExtResource("1_a7i8r")

[node name="modification" type="Label" parent="."]
layout_mode = 2
text = "Simple"
horizontal_alignment = 1
vertical_alignment = 1

[node name="value" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "A"
alignment = 1
max_length = 1

[node name="LRSwitch" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LRModif" type="CheckButton" parent="LRSwitch"]
layout_mode = 2

[node name="Label" type="Label" parent="LRSwitch"]
layout_mode = 2
text = "L/R"

[node name="finger" type="OptionButton" parent="."]
layout_mode = 2
item_count = 10
selected = 0
popup/item_0/text = "l1"
popup/item_0/id = 1
popup/item_1/text = "l2"
popup/item_1/id = 2
popup/item_2/text = "l3"
popup/item_2/id = 3
popup/item_3/text = "l4"
popup/item_3/id = 4
popup/item_4/text = "l5"
popup/item_4/id = 5
popup/item_5/text = "r1"
popup/item_5/id = 6
popup/item_6/text = "r2"
popup/item_6/id = 7
popup/item_7/text = "r3"
popup/item_7/id = 8
popup/item_8/text = "r4"
popup/item_8/id = 9
popup/item_9/text = "r5"
popup/item_9/id = 10

[connection signal="focus_entered" from="value" to="." method="_on_value_focus_entered"]
[connection signal="focus_exited" from="value" to="." method="_on_value_focus_exited"]
[connection signal="text_changed" from="value" to="." method="_on_value_text_changed"]
